src/index.css
@import url('https://fonts.googleapis.com/css2?family=Nunito+Sans:ital,wght@0,300;0,400;0,800;0,900;1,400;1,600&family=Oswald:wght@300;400;500&display=swap');

*{
  --background: #36393f;
  text-decoration: none;
  --header: #23272a;
  box-sizing: border-box;
  --accent: rgb(244, 154, 115);
  --overlay: #838383;
  color: white;
  --toastify-color-progress-dark: var(--accent);
}

html, body{
  height: 100%; 
}

body{
  background-color: var(--background);
  position: relative;
  font-family: Verdana, sans-serif;
  margin: 0;
}

button{
  color: black;
}


caption, input{
  color: black;
}
.loader{
  width: 40vw;
  align-self: center;
}



@media only screen and (min-width:1025px) {
.space-between{
  display: flex;
  align-items: flex-start;
  justify-content: space-between;
}
}


/* For Body Metrics page */

.body-comp-page{
  color: white;
  display: flex;
  justify-content: center;
  align-items: center;
  flex-direction: column;
}

/* For Results Page*/


.results-page{
  color: white;
  align-self: center;
  width: 80vw;
  display: flex;
  align-items: center;
  flex-direction: column;
}

.results-page > article > h2 {
  font-size: 2rem;
  color: var(--accent);
}

.results-page > article > p {
  font-size: 1.4rem;
}

.results-page > article > p > a {
  font-size: 1.4rem;
  color: var(--accent);
}

.results-page > article > img {
  width: 80vw;
}

.results-page > h1{
  padding-top: 30vh;
  padding-bottom: 30vh;
  font-size: 2rem;
  color: white;
}

.results-page > h1 > em {
  color: var(--accent);
}

@media only screen and (min-width:1025px) {
  .results-page > article > img {
    align-self: center;
    width: 40vw;
    margin-left: auto;
    margin-right: auto;
    display: block;
  }
}

.body-comp-page > h2   {
  text-align: center;
}
.body-comp-page > h2 > a {
  color: var(--accent)
}

.clickable{
  color: rgb(244, 154, 115);
  font-weight: 800;
  text-shadow: 0 0 1px black;
  text-decoration: underline;
}



.help-page{
  color: white;
  width: 70vw;
}

.help-page > h2, .help-page > h3{
  color: var(--accent);
}

.help-page >p {
  font-size: 1.2rem;
}


/*NOT FOUND*/

.not-found-page {
  display: flex;
  flex-direction: column;
  align-items: center;
  color: white;
}

.hamburger{z-index: 20;}

/*Hero*/

@media only screen and (min-width:1025px) {
  .hero{
    display: flex;
    align-items: center;
    gap: 5vw;
  }

  .hero > img{
    width: 37.5vw;
    transform: scaleX(-1);
  }
}

